# feeder

./: .gitignore  ChangeLog.md  README.md  feeder.cabal
data/migrations/: 00_create_feed_table.sql  01_create_item_table.sql  02_cascade_delete_feed_item.sql  03_add_click_count_column.sql
data/static/: feeder.css  feeder.js
db/migrations/: 00_create_item_table.sql
src/: .Main.hs.swp  Database.hs  Download.hs  Main.hs  Server.hs
test/: Spec.hs
