name:                feeder
version:             0.1.0.0
synopsis:            A feed reader.
-- description:
license:             PublicDomain
author:              James Newman
maintainer:          jameshildrethnewman@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable feeder
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10,
                       req,
                       xml-conduit,
                       bytestring,
                       http-client,
                       feed,
                       either
  hs-source-dirs:      src
  default-language:    Haskell2010
