name:                feeder
version:             0.1.0.0
synopsis:            A feed reader.
-- description:
license:             PublicDomain
author:              James Newman
maintainer:          jameshildrethnewman@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable feeder
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
--  ghc-options:         -Wall
--                       -fwarn-tabs
--                       -fwarn-incomplete-uni-patterns
  build-depends:       base >=4.9 && <4.10,
                       wreq,
                       lens,
                       bytestring,
                       feed,
                       blaze-html,
                       servant-server,
                       servant-blaze,
                       wai,
                       warp,
                       text,
                       postgresql-simple,
                       postgresql-simple-migration,
                       optparse-applicative,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  main-is:             Spec.hs
  hs-source-dirs:      test, src
--  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.9 && <4.10,
                       hspec,
                       QuickCheck,
                       postgresql-simple,
                       postgresql-simple-migration,
                       time,
                       text
