name:                feeder
version:             0.1.0.0
synopsis:            A feed reader.
-- description:
license:             PublicDomain
author:              James Newman
maintainer:          jameshildrethnewman@gmail.com
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:          data/migrations/*.sql
                     data/static/*.css
other-modules:       Paths_feeder

executable feeder
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       wreq,
                       lens,
                       bytestring,
                       feed,
                       blaze-html,
                       servant-server,
                       servant-blaze,
                       wai,
                       warp,
                       text,
                       postgresql-simple,
                       postgresql-simple-migration,
                       postgresql-simple-url,
                       optparse-applicative,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite tests
  main-is:             Spec.hs
  hs-source-dirs:      test, src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.9 && <4.10,
                       hspec,
                       QuickCheck,
                       postgresql-simple,
                       postgresql-simple-migration,
                       time,
                       text
